--- a/Projects/HadiBilet/HadiBilet/Views/SeatCell.xib
+++ b/Projects/HadiBilet/HadiBilet/Views/SeatCell.xib
@@ -3,7 +3,6 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -20,19 +19,16 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0jM-N1-Ma8">
                         <rect key="frame" x="0.0" y="0.0" width="189" height="146"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lW2-NV-Jaf">
-                                <rect key="frame" x="73" y="63" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lW2-NV-Jaf">
+                                <rect key="frame" x="73.666666666666671" y="62.666666666666657" width="42" height="21"/>
+                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="lW2-NV-Jaf" firstAttribute="top" secondItem="0jM-N1-Ma8" secondAttribute="top" constant="63" id="4FM-By-Fkh"/>
-                            <constraint firstItem="lW2-NV-Jaf" firstAttribute="centerX" secondItem="0jM-N1-Ma8" secondAttribute="centerX" id="XjZ-qX-NhS"/>
-                            <constraint firstItem="lW2-NV-Jaf" firstAttribute="centerY" secondItem="0jM-N1-Ma8" secondAttribute="centerY" id="Yb4-bn-XN4"/>
-                            <constraint firstItem="lW2-NV-Jaf" firstAttribute="leading" secondItem="0jM-N1-Ma8" secondAttribute="leading" constant="73" id="ebW-Rw-GYE"/>
+                            <constraint firstItem="lW2-NV-Jaf" firstAttribute="centerX" secondItem="0jM-N1-Ma8" secondAttribute="centerX" id="H0h-Ic-T7n"/>
+                            <constraint firstItem="lW2-NV-Jaf" firstAttribute="centerY" secondItem="0jM-N1-Ma8" secondAttribute="centerY" id="ysd-op-S5g"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -45,14 +41,10 @@
             </collectionViewCellContentView>
             <size key="customSize" width="189" height="146"/>
             <connections>
+                <outlet property="containerView" destination="0jM-N1-Ma8" id="frl-sh-bwU"/>
                 <outlet property="seatNoLabel" destination="lW2-NV-Jaf" id="cHG-LK-v3o"/>
             </connections>
             <point key="canvasLocation" x="6.8702290076335872" y="54.225352112676056"/>
         </collectionViewCell>
     </objects>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
