--- a/Projects/HadiBilet/HadiBilet/Base.lproj/Main.storyboard
+++ b/Projects/HadiBilet/HadiBilet/Base.lproj/Main.storyboard
@@ -17,50 +17,53 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="B4L-qY-jXb">
-                                <rect key="frame" x="49" y="222" width="291" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="g00-w8-kme">
-                                <rect key="frame" x="49" y="320" width="291" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7OS-aF-sfp">
-                                <rect key="frame" x="159" y="608" width="75" height="35"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
-                                <connections>
-                                    <action selector="reverseCityButtonA:" destination="A22-Cv-NMU" eventType="touchUpInside" id="ILw-f9-Hxz"/>
-                                </connections>
-                            </button>
-                            <datePicker contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" translatesAutoresizingMaskIntoConstraints="NO" id="y3S-10-EQX">
-                                <rect key="frame" x="26" y="414" width="340" height="123"/>
-                            </datePicker>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="dL9-Lx-21z">
+                                <rect key="frame" x="10" y="203" width="373" height="491"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="8" baselineRelativeArrangement="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BUh-xJ-93U">
+                                        <rect key="frame" x="0.0" y="0.0" width="373" height="260"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nuI-nF-KAA" customClass="CityFieldView" customModule="HadiBilet" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="0.0" width="373" height="126"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rhB-aj-lip" customClass="CityFieldView" customModule="HadiBilet" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="134" width="373" height="126"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            </view>
+                                        </subviews>
+                                    </stackView>
+                                    <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" translatesAutoresizingMaskIntoConstraints="NO" id="uUR-Ae-ECI">
+                                        <rect key="frame" x="0.0" y="260" width="373" height="50"/>
+                                        <locale key="locale" localeIdentifier="tr_TR"/>
+                                    </datePicker>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dhq-1P-uZe">
+                                        <rect key="frame" x="0.0" y="310" width="373" height="181"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="arrow.forward" catalog="system" title="Bilet Bul ">
+                                            <fontDescription key="titleFontDescription" name="Avenir-BookOblique" family="Avenir" pointSize="18"/>
+                                        </buttonConfiguration>
+                                        <connections>
+                                            <action selector="searchButton:" destination="A22-Cv-NMU" eventType="touchUpInside" id="P2Z-N9-jyk"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="ru5-7k-jXM"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="y3S-10-EQX" firstAttribute="top" secondItem="g00-w8-kme" secondAttribute="bottom" constant="60" id="9HS-kI-zqr"/>
-                            <constraint firstItem="y3S-10-EQX" firstAttribute="centerX" secondItem="7OS-aF-sfp" secondAttribute="centerX" id="E27-R0-qJa"/>
-                            <constraint firstItem="B4L-qY-jXb" firstAttribute="leading" secondItem="ru5-7k-jXM" secondAttribute="leading" constant="49" id="J0b-0c-BCG"/>
-                            <constraint firstItem="y3S-10-EQX" firstAttribute="centerX" secondItem="WB6-FS-bJy" secondAttribute="centerX" id="Li3-Vm-vNJ"/>
-                            <constraint firstItem="B4L-qY-jXb" firstAttribute="trailing" secondItem="g00-w8-kme" secondAttribute="trailing" id="MV0-rF-fx5"/>
-                            <constraint firstItem="g00-w8-kme" firstAttribute="top" secondItem="B4L-qY-jXb" secondAttribute="bottom" constant="64" id="OnU-fH-FbF"/>
-                            <constraint firstItem="ru5-7k-jXM" firstAttribute="trailing" secondItem="B4L-qY-jXb" secondAttribute="trailing" constant="53" id="ZGw-l8-2Pm"/>
-                            <constraint firstItem="7OS-aF-sfp" firstAttribute="top" secondItem="y3S-10-EQX" secondAttribute="bottom" constant="71" id="aXX-bR-jf0"/>
-                            <constraint firstItem="B4L-qY-jXb" firstAttribute="leading" secondItem="g00-w8-kme" secondAttribute="leading" id="hOx-WQ-HbI"/>
-                            <constraint firstItem="B4L-qY-jXb" firstAttribute="top" secondItem="ru5-7k-jXM" secondAttribute="top" constant="119" id="jm5-oa-ZzB"/>
-                            <constraint firstItem="y3S-10-EQX" firstAttribute="leading" secondItem="ru5-7k-jXM" secondAttribute="leading" constant="26" id="sd6-hQ-aQa"/>
-                            <constraint firstItem="ru5-7k-jXM" firstAttribute="bottom" secondItem="7OS-aF-sfp" secondAttribute="bottom" constant="126" id="vCN-og-zeP"/>
+                            <constraint firstItem="ru5-7k-jXM" firstAttribute="bottom" secondItem="dL9-Lx-21z" secondAttribute="bottom" constant="75" id="BgL-FI-CAZ"/>
+                            <constraint firstItem="dL9-Lx-21z" firstAttribute="top" secondItem="ru5-7k-jXM" secondAttribute="top" constant="100" id="NMo-LO-pAA"/>
+                            <constraint firstItem="dL9-Lx-21z" firstAttribute="leading" secondItem="ru5-7k-jXM" secondAttribute="leading" constant="10" id="obN-dg-Z0L"/>
+                            <constraint firstItem="ru5-7k-jXM" firstAttribute="trailing" secondItem="dL9-Lx-21z" secondAttribute="trailing" constant="10" id="vI8-bf-ywj"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="HADİ BİLET" id="13m-CY-d82"/>
                     <connections>
-                        <outlet property="NereyeTextField" destination="g00-w8-kme" id="MCo-9a-OX0"/>
-                        <outlet property="datePicker" destination="y3S-10-EQX" id="LH9-P9-Qm2"/>
-                        <outlet property="neredenTextField" destination="B4L-qY-jXb" id="o5v-eZ-tYM"/>
+                        <outlet property="datePicker" destination="uUR-Ae-ECI" id="1Df-46-T0M"/>
+                        <outlet property="neredenView" destination="nuI-nF-KAA" id="gXu-ls-Crf"/>
+                        <outlet property="nereyeView" destination="rhB-aj-lip" id="2xN-Jk-s10"/>
                         <segue destination="BYZ-38-t0r" kind="show" identifier="goToSecondViewController" id="Qvy-lf-cEM"/>
                     </connections>
                 </viewController>
@@ -87,7 +90,7 @@
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="HrI-Gt-op2" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="4Zf-FE-419"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="HrI-Gt-op2" secondAttribute="trailing" id="GAO-TX-4ES"/>
@@ -174,7 +177,7 @@
                             </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="0vw-3c-7C7"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="0vw-3c-7C7" firstAttribute="trailing" secondItem="bGM-2D-1u5" secondAttribute="trailing" constant="28" id="006-fz-N0J"/>
                             <constraint firstItem="W9j-mE-pVu" firstAttribute="leading" secondItem="0vw-3c-7C7" secondAttribute="leading" id="Edh-hs-mwP"/>
@@ -249,18 +252,57 @@
                     <view key="view" contentMode="scaleToFill" id="lUe-JV-TK1">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="9OL-g1-Qxl">
+                                <rect key="frame" x="16" y="140" width="361" height="421"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="dWe-Fn-8V2">
+                                        <rect key="frame" x="0.0" y="0.0" width="361" height="128"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gpn-B1-PoZ" customClass="CityFieldView" customModule="HadiBilet" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="0.0" width="175.66666666666666" height="128"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GZV-qk-xfW" customClass="CityFieldView" customModule="HadiBilet" customModuleProvider="target">
+                                                <rect key="frame" x="185.66666666666663" y="0.0" width="175.33333333333337" height="128"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            </view>
+                                        </subviews>
+                                    </stackView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hJI-2d-Adm">
+                                        <rect key="frame" x="0.0" y="128" width="361" height="293"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                        <connections>
+                                            <action selector="buttonTapped:" destination="xTy-ga-x7l" eventType="touchUpInside" id="QC1-kG-b6d"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="OXY-CR-A4n"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="9OL-g1-Qxl" firstAttribute="top" secondItem="OXY-CR-A4n" secondAttribute="top" constant="81" id="UX6-Kj-hTP"/>
+                            <constraint firstItem="9OL-g1-Qxl" firstAttribute="leading" secondItem="OXY-CR-A4n" secondAttribute="leading" constant="16" id="bEw-Ij-eZf"/>
+                            <constraint firstItem="OXY-CR-A4n" firstAttribute="bottom" secondItem="9OL-g1-Qxl" secondAttribute="bottom" constant="208" id="gwm-K3-FJB"/>
+                            <constraint firstItem="OXY-CR-A4n" firstAttribute="trailing" secondItem="9OL-g1-Qxl" secondAttribute="trailing" constant="16" id="iph-Em-kjl"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="EhV-jP-Dht"/>
+                    <connections>
+                        <outlet property="neredenView" destination="gpn-B1-PoZ" id="jYh-FB-Sc6"/>
+                        <outlet property="nereyeView" destination="GZV-qk-xfW" id="svd-EQ-n3e"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VBD-WZ-r6M" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-668" y="804"/>
+            <point key="canvasLocation" x="-669.46564885496184" y="803.52112676056345"/>
         </scene>
     </scenes>
     <resources>
         <image name="BusFront" width="350" height="717"/>
+        <image name="arrow.forward" catalog="system" width="128" height="95"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
