--- a/Projects/HadiBilet/HadiBilet/Views/CityFieldView.xib
+++ b/Projects/HadiBilet/HadiBilet/Views/CityFieldView.xib
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -13,65 +12,65 @@
                 <outlet property="cityTextField" destination="Nzf-DX-oqV" id="a60-7O-tmo"/>
                 <outlet property="containerView" destination="Vwq-Nb-sjD" id="LPm-Ih-Ban"/>
                 <outlet property="headerLabel" destination="Bqz-0T-0gm" id="2yr-m7-E85"/>
+                <outlet property="imageView" destination="vm9-Ni-PEO" id="85H-Wc-ZZ4"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleAspectFit" id="JBZ-TQ-7j5">
-            <rect key="frame" x="0.0" y="0.0" width="393" height="220"/>
+            <rect key="frame" x="0.0" y="0.0" width="373" height="126"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Vwq-Nb-sjD">
-                    <rect key="frame" x="0.0" y="0.0" width="393" height="186"/>
+                    <rect key="frame" x="0.0" y="0.0" width="373" height="126"/>
                     <subviews>
-                        <stackView opaque="NO" contentMode="center" axis="vertical" alignment="center" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="ONd-VF-kce">
-                            <rect key="frame" x="0.0" y="0.0" width="393" height="186"/>
+                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="DKP-K3-RvF">
+                            <rect key="frame" x="1" y="1" width="371" height="124"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lütfen Seçin" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bqz-0T-0gm">
-                                    <rect key="frame" x="103.33333333333333" y="0.0" width="186.33333333333337" height="42"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="35"/>
-                                    <nil key="textColor"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                                <textField opaque="NO" contentMode="top" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Nereden" textAlignment="center" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Nzf-DX-oqV">
-                                    <rect key="frame" x="116" y="45" width="161" height="141"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="44"/>
-                                    <textInputTraits key="textInputTraits"/>
-                                </textField>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mappin.and.ellipse" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="vm9-Ni-PEO">
+                                    <rect key="frame" x="0.0" y="-1.3333333333333357" width="34.666666666666664" height="125.33333333333334"/>
+                                </imageView>
+                                <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="ONd-VF-kce">
+                                    <rect key="frame" x="54.666666666666657" y="0.0" width="316.33333333333337" height="124"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lütfen Seçin" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bqz-0T-0gm">
+                                            <rect key="frame" x="0.0" y="0.0" width="316.33333333333331" height="36"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <textField opaque="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Nereden" adjustsFontForContentSizeCategory="YES" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="Nzf-DX-oqV">
+                                            <rect key="frame" x="0.0" y="38" width="316.33333333333331" height="86"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="44"/>
+                                            <textInputTraits key="textInputTraits"/>
+                                        </textField>
+                                    </subviews>
+                                </stackView>
                             </subviews>
-                            <constraints>
-                                <constraint firstItem="Nzf-DX-oqV" firstAttribute="centerX" secondItem="ONd-VF-kce" secondAttribute="centerX" id="O3z-wQ-6qB"/>
-                                <constraint firstItem="Bqz-0T-0gm" firstAttribute="centerX" secondItem="ONd-VF-kce" secondAttribute="centerX" id="Vhp-KW-SEz"/>
-                            </constraints>
                         </stackView>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
-                        <constraint firstItem="ONd-VF-kce" firstAttribute="top" secondItem="Vwq-Nb-sjD" secondAttribute="top" id="BM5-NI-DBC"/>
-                        <constraint firstAttribute="trailing" secondItem="ONd-VF-kce" secondAttribute="trailing" id="L3b-RG-ZZ9"/>
-                        <constraint firstItem="ONd-VF-kce" firstAttribute="leading" secondItem="Vwq-Nb-sjD" secondAttribute="leading" id="QMm-HV-UVS"/>
-                        <constraint firstAttribute="bottom" secondItem="ONd-VF-kce" secondAttribute="bottom" id="VbY-ap-bta"/>
+                        <constraint firstAttribute="trailing" secondItem="DKP-K3-RvF" secondAttribute="trailing" constant="1" id="Ogg-w6-lBL"/>
+                        <constraint firstAttribute="bottom" secondItem="DKP-K3-RvF" secondAttribute="bottom" constant="1" id="WSQ-62-Had"/>
+                        <constraint firstItem="DKP-K3-RvF" firstAttribute="leading" secondItem="Vwq-Nb-sjD" secondAttribute="leading" constant="1" id="k2t-8w-nTh"/>
+                        <constraint firstItem="DKP-K3-RvF" firstAttribute="top" secondItem="Vwq-Nb-sjD" secondAttribute="top" constant="1" id="y7V-Qm-L9e"/>
                     </constraints>
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="lP0-VO-Kkk"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="Vwq-Nb-sjD" firstAttribute="leading" secondItem="lP0-VO-Kkk" secondAttribute="leading" id="4ye-Y8-aS7"/>
-                <constraint firstItem="Vwq-Nb-sjD" firstAttribute="top" secondItem="JBZ-TQ-7j5" secondAttribute="top" id="Fgd-vE-av3"/>
-                <constraint firstItem="Vwq-Nb-sjD" firstAttribute="bottom" secondItem="lP0-VO-Kkk" secondAttribute="bottom" id="TeK-s4-wwz"/>
-                <constraint firstItem="lP0-VO-Kkk" firstAttribute="trailing" secondItem="Vwq-Nb-sjD" secondAttribute="trailing" id="g9b-Ku-ZNh"/>
-                <constraint firstItem="lP0-VO-Kkk" firstAttribute="bottom" secondItem="Vwq-Nb-sjD" secondAttribute="bottom" id="hXb-w1-gMU"/>
-                <constraint firstItem="Vwq-Nb-sjD" firstAttribute="top" secondItem="JBZ-TQ-7j5" secondAttribute="top" id="oZe-2Y-KmT"/>
-                <constraint firstItem="Vwq-Nb-sjD" firstAttribute="leading" secondItem="lP0-VO-Kkk" secondAttribute="leading" id="yMW-LK-edx"/>
-                <constraint firstItem="Vwq-Nb-sjD" firstAttribute="trailing" secondItem="lP0-VO-Kkk" secondAttribute="trailing" id="zqk-6k-xFj"/>
+                <constraint firstItem="Vwq-Nb-sjD" firstAttribute="trailing" secondItem="lP0-VO-Kkk" secondAttribute="trailing" id="7oa-mE-hMA"/>
+                <constraint firstItem="Vwq-Nb-sjD" firstAttribute="top" secondItem="JBZ-TQ-7j5" secondAttribute="top" id="H8m-Ct-GX5"/>
+                <constraint firstItem="Vwq-Nb-sjD" firstAttribute="leading" secondItem="lP0-VO-Kkk" secondAttribute="leading" id="Lo3-RD-BGx"/>
+                <constraint firstItem="Vwq-Nb-sjD" firstAttribute="trailing" secondItem="lP0-VO-Kkk" secondAttribute="trailing" id="N4C-L0-O0d"/>
+                <constraint firstAttribute="bottom" secondItem="Vwq-Nb-sjD" secondAttribute="bottom" id="kPi-cG-D0D"/>
+                <constraint firstItem="Vwq-Nb-sjD" firstAttribute="leading" secondItem="lP0-VO-Kkk" secondAttribute="leading" id="xLD-3e-v1H"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="-518.32061068702285" y="-204.92957746478874"/>
+            <point key="canvasLocation" x="-488.54961832061065" y="-247.88732394366198"/>
         </view>
     </objects>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="mappin.and.ellipse" catalog="system" width="110" height="128"/>
     </resources>
 </document>
